--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,8 @@
         /* allow import React instead of import * as React */
         "allowSyntheticDefaultImports": true,
         /*  Emit interop between CommonJS and ES modules */
+        "esModuleInterop": true,
+        "resolveJsonModule": true,
         "esModuleInterop": true
     },
     "include": ["src/**/*"],
