--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,7 @@
         "allowSyntheticDefaultImports": true,
         /*  Emit interop between CommonJS and ES modules */
         "esModuleInterop": true,
-        "resolveJsonModule": true,
-        "esModuleInterop": true
+        "resolveJsonModule": true
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
